fix navbars gaps

--- a/src/assets/bulma_config.sass
+++ b/src/assets/bulma_config.sass
@@ -1,5 +1,6 @@
 @charset "utf-8"
 $gap: 16px
+$navbar-height: 4rem
 $button-border-color: black
 $input-border-color: black
 @import "bulma/bulma.sass"
